# batcherbird

./: ARCHITECTURE.md  AUDIO_ARCHITECTURE.md  CORE_SEPARATION.md  Cargo.toml  IMPLEMENTATION_PRD.md  README.md  ROADMAP.md  TAURI_AUDIO_ARCHITECTURE.md  blogpost-arch.md  blogpost-audio-monitoring.md  blogpost-sample-detection-part1.md  blogpost-sample-detection-part2.md  blogpost-velocity-layers.md  export_test_sample  export_test_sample.rs  test_export_formats.rs
PRD/: batcherbird-planning.md
crates/batcherbird-cli/: Cargo.toml
crates/batcherbird-cli/src/: main.rs
crates/batcherbird-core/: Cargo.toml
crates/batcherbird-core/src/: audio.rs  config.rs  detection.rs  device.rs  error.rs  export.rs  lib.rs  loop_detection.rs  midi.rs  sampler.rs  session.rs
crates/batcherbird-core/tests/: export_integration.rs
crates/batcherbird-gui/: Cargo.toml  build.rs  create_placeholder_icons.sh  tauri.conf.json
crates/batcherbird-gui/frontend/: index.html  main.js  templates.js
crates/batcherbird-gui/icons/: create_icons.py
crates/batcherbird-gui/src/: lib.rs  main.rs
crates/batcherbird-gui/src-tauri/: Cargo.toml  tauri.conf.json  test_sfz_output.md
crates/batcherbird-gui/src-tauri/PRD/: synthesizer-sample-analysis-methodology.md
crates/batcherbird-gui/src-tauri/src/: lib.rs
export_examples/: example_instrument.dspreset  example_instrument.sfz
