[package]
name = "batcherbird-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Batcherbird hardware synthesizer sampling"
license = "MIT OR Apache-2.0"

[dependencies]
midir = { workspace = true }
cpal = { workspace = true }
hound = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[features]
default = []