[package]
name = "batcherbird-gui"
version = "0.1.0"
edition = "2021"
description = "GUI interface for Batcherbird hardware synthesizer sampling"
license = "MIT OR Apache-2.0"

[dependencies]
batcherbird-core = { path = "../batcherbird-core" }
tauri = { version = "2.0", features = [] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[[bin]]
name = "batcherbird-gui"
path = "src/main.rs"